Fix: API URL atualizada, botao retirada movido para header, sincronizacao mobile apps

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10055,6 +10055,15 @@
                 </svg>
                 <span>Relatório</span>
               </button>
+              <button class="almox2-btn almox2-btn-accent" onclick="showQuickWithdrawal()">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <polyline points="17 1 21 5 17 9"/>
+                  <path d="M3 11V9a4 4 0 0 1 4-4h14"/>
+                  <polyline points="7 23 3 19 7 15"/>
+                  <path d="M21 13v2a4 4 0 0 1-4 4H3"/>
+                </svg>
+                <span>Retirada</span>
+              </button>
               <button class="almox2-btn almox2-btn-primary" onclick="showCreateItem()">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <line x1="12" y1="5" x2="12" y2="19"/>
@@ -10189,25 +10198,7 @@
               </div>
             </div>
 
-            <!-- Quick Action Button for Withdrawal -->
-            <div class="almox2-quick-actions">
-              <button class="almox2-btn almox2-btn-accent" onclick="showQuickWithdrawal()">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <polyline points="17 1 21 5 17 9"/>
-                  <path d="M3 11V9a4 4 0 0 1 4-4h14"/>
-                  <polyline points="7 23 3 19 7 15"/>
-                  <path d="M21 13v2a4 4 0 0 1-4 4H3"/>
-                </svg>
-                Registrar Retirada Rápida
-              </button>
-              <button class="almox2-btn almox2-btn-success" onclick="showQuickEntry()">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <line x1="12" y1="5" x2="12" y2="19"/>
-                  <line x1="5" y1="12" x2="19" y2="12"/>
-                </svg>
-                Entrada de Material
-              </button>
-            </div>
+
 
             <!-- Inventory Table Card -->
             <div class="almox2-card">
