feat: melhorias almoxarifado - charts, in_use_count, setor dropdown

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10465,6 +10465,26 @@
                   <canvas id="almox2-categories-chart"></canvas>
                 </div>
               </div>
+              
+              <!-- Loans Status (Devolvidos vs Pendentes) -->
+              <div class="almox2-chart-card">
+                <div class="almox2-chart-header">
+                  <h4>🔄 Status dos Empréstimos</h4>
+                </div>
+                <div class="almox2-chart" id="almox2-chart-loans" style="height: 220px;">
+                  <canvas id="almox2-loans-chart"></canvas>
+                </div>
+              </div>
+
+              <!-- Usage Type Distribution -->
+              <div class="almox2-chart-card">
+                <div class="almox2-chart-header">
+                  <h4>📊 Saídas por Tipo de Uso</h4>
+                </div>
+                <div class="almox2-chart" id="almox2-chart-usage" style="height: 220px;">
+                  <canvas id="almox2-usage-chart"></canvas>
+                </div>
+              </div>
             </div>
 
             <!-- Top Items & Sectors -->
