--- a/icarus-lav/www/index.html
+++ b/icarus-lav/www/index.html
@@ -14713,8 +14713,8 @@
             </svg>
           </div>
           <div class="export-option-info">
-            <h4>Imprimir / Salvar PDF</h4>
-            <p>Documento formatado profissional com design Icarus</p>
+            <h4>📥 Baixar HTML</h4>
+            <p>Relatório offline - funciona sem internet!</p>
           </div>
           <div class="export-option-arrow">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
