--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11644,23 +11644,23 @@
               </div>
             </div>
 
-            <!-- Stats Cards Notas -->
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 16px; padding: 0 20px 24px 20px;">
-              <div style="background: rgba(16, 185, 129, 0.1); border: 1px solid rgba(16, 185, 129, 0.3); border-radius: 16px; padding: 20px;">
-                <p style="font-size: 11px; color: rgba(255,255,255,0.5); text-transform: uppercase; letter-spacing: 1px; margin: 0 0 8px 0;">Total Pendente</p>
-                <p style="font-size: 28px; font-weight: 800; color: #10b981; margin: 0;" id="notas-total-pendente">R$ 0,00</p>
+            <!-- Stats Cards Notas - Layout em 1 linha com 4 cards -->
+            <div class="notas-stats-grid" style="display: flex; gap: 12px; padding: 0 20px 20px 20px; flex-wrap: nowrap; overflow-x: auto;">
+              <div style="flex: 1; min-width: 140px; background: linear-gradient(135deg, rgba(16, 185, 129, 0.15), rgba(16, 185, 129, 0.05)); border: 1px solid rgba(16, 185, 129, 0.3); border-radius: 14px; padding: 16px;">
+                <p style="font-size: 10px; color: rgba(255,255,255,0.5); text-transform: uppercase; letter-spacing: 1px; margin: 0 0 6px 0;">Total Pendente</p>
+                <p style="font-size: 20px; font-weight: 800; color: #10b981; margin: 0;" id="notas-total-pendente">R$ 0,00</p>
               </div>
-              <div style="background: rgba(251, 146, 60, 0.1); border: 1px solid rgba(251, 146, 60, 0.3); border-radius: 16px; padding: 20px;">
-                <p style="font-size: 11px; color: rgba(255,255,255,0.5); text-transform: uppercase; letter-spacing: 1px; margin: 0 0 8px 0;">Vence em 7 dias</p>
-                <p style="font-size: 28px; font-weight: 800; color: #fb923c; margin: 0;" id="notas-vence-7dias">0</p>
+              <div style="flex: 1; min-width: 140px; background: linear-gradient(135deg, rgba(251, 146, 60, 0.15), rgba(251, 146, 60, 0.05)); border: 1px solid rgba(251, 146, 60, 0.3); border-radius: 14px; padding: 16px;">
+                <p style="font-size: 10px; color: rgba(255,255,255,0.5); text-transform: uppercase; letter-spacing: 1px; margin: 0 0 6px 0;">Vence em 7 dias</p>
+                <p style="font-size: 20px; font-weight: 800; color: #fb923c; margin: 0;" id="notas-vence-7dias">0</p>
               </div>
-              <div style="background: rgba(239, 68, 68, 0.1); border: 1px solid rgba(239, 68, 68, 0.3); border-radius: 16px; padding: 20px;">
-                <p style="font-size: 11px; color: rgba(255,255,255,0.5); text-transform: uppercase; letter-spacing: 1px; margin: 0 0 8px 0;">Vencidos</p>
-                <p style="font-size: 28px; font-weight: 800; color: #ef4444; margin: 0;" id="notas-vencidos">0</p>
+              <div style="flex: 1; min-width: 140px; background: linear-gradient(135deg, rgba(239, 68, 68, 0.15), rgba(239, 68, 68, 0.05)); border: 1px solid rgba(239, 68, 68, 0.3); border-radius: 14px; padding: 16px;">
+                <p style="font-size: 10px; color: rgba(255,255,255,0.5); text-transform: uppercase; letter-spacing: 1px; margin: 0 0 6px 0;">Vencidos</p>
+                <p style="font-size: 20px; font-weight: 800; color: #ef4444; margin: 0;" id="notas-vencidos">0</p>
               </div>
-              <div style="background: rgba(139, 92, 246, 0.1); border: 1px solid rgba(139, 92, 246, 0.3); border-radius: 16px; padding: 20px;">
-                <p style="font-size: 11px; color: rgba(255,255,255,0.5); text-transform: uppercase; letter-spacing: 1px; margin: 0 0 8px 0;">Este Mês</p>
-                <p style="font-size: 28px; font-weight: 800; color: #a78bfa; margin: 0;" id="notas-este-mes">0</p>
+              <div style="flex: 1; min-width: 140px; background: linear-gradient(135deg, rgba(139, 92, 246, 0.15), rgba(139, 92, 246, 0.05)); border: 1px solid rgba(139, 92, 246, 0.3); border-radius: 14px; padding: 16px;">
+                <p style="font-size: 10px; color: rgba(255,255,255,0.5); text-transform: uppercase; letter-spacing: 1px; margin: 0 0 6px 0;">Este Mês</p>
+                <p style="font-size: 20px; font-weight: 800; color: #a78bfa; margin: 0;" id="notas-este-mes">0</p>
               </div>
             </div>
 
