--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -10078,6 +10078,8 @@
                   <option value="parafusos">Parafusos</option>
                   <option value="lubrificantes">Lubrificantes</option>
                   <option value="epis">EPIs</option>
+                  <option value="yamasa">Yamasa</option>
+                  <option value="sala_ovos">Sala de Ovos</option>
                   <option value="outros">Outros</option>
                 </select>
                 <select id="almox-filter-marca" onchange="filterAlmoxarifado()">
@@ -12804,16 +12806,16 @@
               outline: none;
             " onfocus="this.style.borderColor='rgba(139,92,246,0.5)';this.style.boxShadow='0 0 20px rgba(139,92,246,0.2)'" onblur="this.style.borderColor='rgba(255,255,255,0.1)';this.style.boxShadow='none'">
               <option value="" style="background: #1a1a2e;">Selecione...</option>
-              <option value="yamasa" style="background: #1a1a2e;">🏭 Yamasa (Fábrica)</option>
-              <option value="eletrico" style="background: #1a1a2e;">Elétrico</option>
-              <option value="pneumatico" style="background: #1a1a2e;">Pneumático</option>
-              <option value="hidraulico" style="background: #1a1a2e;">Hidráulico</option>
-              <option value="mecanico" style="background: #1a1a2e;">Mecânico</option>
-              <option value="rolamento" style="background: #1a1a2e;">Rolamento/Bearing</option>
-              <option value="ferramenta" style="background: #1a1a2e;">Ferramenta</option>
-              <option value="epi" style="background: #1a1a2e;">EPI/Segurança</option>
-              <option value="limpeza" style="background: #1a1a2e;">Limpeza</option>
-              <option value="outro" style="background: #1a1a2e;">Outro</option>
+              <option value="ferramentas" style="background: #1a1a2e;">🔧 Ferramentas</option>
+              <option value="eletrica" style="background: #1a1a2e;">⚡ Elétrica</option>
+              <option value="hidraulica" style="background: #1a1a2e;">💧 Hidráulica</option>
+              <option value="rolamentos" style="background: #1a1a2e;">⚙️ Rolamentos</option>
+              <option value="parafusos" style="background: #1a1a2e;">🔩 Parafusos</option>
+              <option value="lubrificantes" style="background: #1a1a2e;">🛢️ Lubrificantes</option>
+              <option value="epis" style="background: #1a1a2e;">🦺 EPIs</option>
+              <option value="yamasa" style="background: #1a1a2e;">🏭 Yamasa</option>
+              <option value="sala_ovos" style="background: #1a1a2e;">🥚 Sala de Ovos</option>
+              <option value="outros" style="background: #1a1a2e;">📦 Outros</option>
             </select>
           </div>
           <div style="position: relative;">
